# qrcode-generator

./: Dockerfile  README.md  file_utils.py  lambda_function.py  pyproject.toml  qrcode_service.py
scripts/: container_commands.sh  generate_lambda_layer.sh  zip_python_code.sh
