[tool.poetry]
name = "qrcode-generator"
version = "0.1.0"
description = ""
authors = ["Mpcsj <mpcsjempreendimentos@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
qrcode = "^7.3.1"
Pillow = "^9.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

